- Modified  CWnd::DeferWindowPos		now uses CWnd* for second argument

Added IDW_READY resource for ready string.
Added VS2013 project files
Tutorials 1 and 2 now use OnDestroy to end the application

Incompatibilities with previous versions
----------------------------------------
* The CSocket functions: Receive; ReceiveFrom; Send; and SendTo now use char
* Programs with frames should now use the IDW_READY resource for "Ready" 


Version 7.3
===========

New Features and Enhancements
-----------------------------
* Adjusted the frame's appearance
	- Updated the visual appearance of popup menus on systems using Windows Aero. On 
	  systems with Aero, popup menus are rendered with Windows Visual Styles. Systems
	  without Aero continue to use the Win32++ theme for popup menus.
	- Frames now honour the current window theme's menu and status fonts.
	- the frame's appearance changes dynamically to reflect changes to the window theme.
	- minor adjustment to the rebar theme colours for the "Modern" theme.
	
* Extended CWebBrowser
	The CWebBrower class has been extended to wrap the member functions of
	iWebBrowser2. The Browser sample has been updated and now supports
	Copy/Paste.

* Added the following controls
   - CDateTime
   - CHeader
   - CHotKey
   - CIPAddress
   - CMonthCalendar
   - CTooltip
   
* CString constructors now accept either ANSI or Unicode characters and converts
   these to TCHAR as required.
   
* Extended CDC
	The CDC::DetachBitmap function has been added. This provides a convenient
	way of detaching a bitmap from a memory DC created by CreateCompatibleBitmap.
	The various CDC::CreateXXX functions now return void instead of a pointer
	to the old GDI object.


Changes in detail
-----------------
- Added 	CDateTime
- Added 	CHeader
- Added		CHotKey
- Added 	CIPAddress
- Added 	CMonthCalendar
- Added 	CTooltip

- Added		wndTop					a special CWnd for use with SetWindowPos
- Added		wndTopMost				a special CWnd for use with SetWindowPos