@@ -149,8 +149,7 @@ END
 STRINGTABLE
 BEGIN
     IDW_MAIN                "Scribble Application"
-    IDW_VIEW_TOOLBAR        "Show or hide the tool bar"
-    IDW_VIEW_STATUSBAR      "Show or hide the status bar"
+    IDW_READY               "Ready"
 END
 
 STRINGTABLE
