@@ -24,10 +24,6 @@ BOOL CMainFrame::OnCommand(WPARAM wParam, LPARAM lParam)
 		// End the application
 		::PostMessage(m_hWnd, WM_CLOSE, 0, 0);
 		return TRUE;
-	case IDM_HELP_ABOUT:
-		// Display the help dialog
-		OnHelp();
-		return TRUE;
 	case IDM_FILE_NEW:
 		::MessageBox(NULL, _T("File New  ... Implemented later"), _T("Menu"), MB_OK);
 		return TRUE;
@@ -42,6 +38,16 @@ BOOL CMainFrame::OnCommand(WPARAM wParam, LPARAM lParam)
 		return TRUE;
 	case IDM_FILE_PRINT:
 		::MessageBox(NULL, _T("File Print  ... Implemented later"), _T("Menu"), MB_OK);
+		return TRUE;
+	case IDW_VIEW_STATUSBAR:
+		OnViewStatusBar();
+		return TRUE;
+	case IDW_VIEW_TOOLBAR:
+		OnViewToolBar();
+		return TRUE;
+	case IDM_HELP_ABOUT:
+		// Display the help dialog
+		OnHelp();
 		return TRUE;
 	}
 
