@@ -24,10 +24,6 @@ BOOL CMainFrame::OnCommand(WPARAM wParam, LPARAM lParam)
 		// End the application
 		::PostMessage(m_hWnd, WM_CLOSE, 0, 0);
 		return TRUE;
-	case IDM_HELP_ABOUT:
-		// Display the help dialog
-		OnHelp();
-		return TRUE;
 	case IDM_FILE_NEW:
 		::MessageBox(NULL, _T("File New  ... Implemented later"), _T("Menu"), MB_OK);
 		return TRUE;
@@ -54,6 +50,16 @@ BOOL CMainFrame::OnCommand(WPARAM wParam, LPARAM lParam)
 		return TRUE;
 	case IDM_PEN_BLACK:
 		m_View.SetPen(RGB(0,0,0));
+		return TRUE;
+	case IDW_VIEW_STATUSBAR:
+		OnViewStatusBar();
+		return TRUE;
+	case IDW_VIEW_TOOLBAR:
+		OnViewToolBar();
+		return TRUE;
+	case IDM_HELP_ABOUT:
+		// Display the help dialog
+		OnHelp();
 		return TRUE;
 	}
 
